--- a/second.html
+++ b/second.html
@@ -10,7 +10,7 @@
     <div class="header">  
   <h1></h1>
     </div>
-  <button class="home-button" onclick="document.location='team5.html'">back to home</button>
+  <button class="home-button" onclick="document.location='https://grumiku.github.io/survey-form/'">back to home</button>
 
 <div class="form-card">
 <div class="form-card-header">
