--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <label><input type="radio" name="has_condition" value="yes" /> Yes</label>
       <label><input type="radio" name="has_condition" value="no" /> No</label>
     </div>
-    <label for="conditionDetail">If yes, kindly type the condition. If no, type N/A:</label>
+    <label for="conditionDetail">If yes, kindly type the condition.</label>
     <input type="text" id="conditionDetail" name="condition_detail" placeholder="Please specify" />
   </div>
     <h2>SECTION 2: DISASTER PREPAREDNESS</h2>
